--- a/app/assets/templates/products/product_show.html.slim
+++ b/app/assets/templates/products/product_show.html.slim
@@ -39,7 +39,7 @@
       div ng-repeat="size in data.pr_det.product_sizes" class="size size-{{size.size}}" ng-class="{active: size.id == formData.size_id}" ng-click="chooseSize(size.id)"
         ' {{ size.size }}
 
-    my-modal-size
+    my-modal-size sizes="data.pr_det.product_sizes" modal-size="modalSize" size-id="formData.size_id"
 
     .add-to-cart-button
       a ng-click="addToCart()"
