[#0] 0.2 Add 'delete-confirmation modal'

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -86,3 +86,13 @@ body .nav-tabs a {
     margin-bottom: 2px;
   }
 }
+
+.confirm-button {
+  float: left;
+  text-transform: uppercase;
+}
+
+.cancel-button {
+  float: right;
+  text-transform: uppercase;
+}
