--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -327,7 +327,7 @@ p.name {
   }
 }
 
-.modal-product-sizes {
+.modal-layout {
 
   .modal-background {
     z-index: 110;
@@ -347,7 +347,6 @@ p.name {
     margin-top: 30px;
     margin-left: -150px;
     width: 300px;
-    height: 100px;
     z-index: 120;
     background: LightGray;
     padding: 10px;
