--- a/app/assets/templates/modals/modal_size.html.slim
+++ b/app/assets/templates/modals/modal_size.html.slim
@@ -1,4 +1,4 @@
-.modal-product-sizes ng-show="modalSize"
+.modal-layout ng-show="modalSize"
   .modal-background ng-click="closeModal()"
   .modal-sizes
     .modal-close ng-click="closeModal()"
