--- a/app/assets/templates/modals/modal_delete_confirmation.html.slim
+++ b/app/assets/templates/modals/modal_delete_confirmation.html.slim
@@ -1,13 +1,9 @@
-.modal-layout ng-show="deleteConfirmation"
-  .modal-background ng-click="closeModal()"
-  .modal-sizes
-    .modal-close ng-click="closeModal()"
-      ' x
-    p
-      ' {{ 'MODAL_DELETE_CONFIRMATION_MESSAGE' | translate }}
+.modal-sizes style="height: 70px"
+  p
+    ' {{ 'MODAL_DELETE_CONFIRMATION_MESSAGE' | translate }}
 
-    button.btn.btn-default.confirm-button ng-click="confirm();closeModal()"
-      ' {{ 'MODAL_DELETE_CONFIRMATION_YES' | translate }}
+  button.btn.btn-default.confirm-button ng-click="closeThisDialog(1)"
+    ' {{ 'MODAL_DELETE_CONFIRMATION_YES' | translate }}
 
-    button.btn.btn-default.cancel-button ng-click="closeModal()"
-      ' {{ 'MODAL_DELETE_CONFIRMATION_CANCEL' | translate }}
+  button.btn.btn-default.cancel-button ng-click="closeThisDialog()"
+    ' {{ 'MODAL_DELETE_CONFIRMATION_CANCEL' | translate }}
