[#0] 0.3 - use ngDial plugin in size modal

--- a/app/assets/templates/modals/modal_delete_confirmation.html.slim
+++ b/app/assets/templates/modals/modal_delete_confirmation.html.slim
@@ -1,4 +1,4 @@
-.modal-sizes style="height: 70px"
+.modal-layout style="height: 85px"
   p
     ' {{ 'MODAL_DELETE_CONFIRMATION_MESSAGE' | translate }}
 
