[#9] 9.1 & 9.3 Move header order list to directive, add deleting items from cart

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -197,13 +197,24 @@ input {
   padding-top: 10px;
   padding-bottom: 10px;
   .cart-list-item-header {
+    position: relative;
     display: block;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 30px;
     padding-bottom: 10px;
   }
   .cart-list-item-header:last-child {
     padding-bottom: 0px;
+  }
+}
+
+.cart-list-header-remove-item {
+  position: absolute;
+  right: 15px;
+  top: 8px;
+
+  &:hover {
+    color: red;
   }
 }
 
