--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,14 +8,15 @@ html ng-app="shop"
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
 
+    javascript:
+      window.categories = #{ raw MainCategory.all.includes(category_types: :categories).extend(MainCategoriesRepresenter).to_json}
+
     - if logged_in?
-         javascript:
-           window.currentUser = #{ raw current_user.extend(HeaderUserRepresenter).to_json}
-           window.categories = #{ raw MainCategory.all.extend(MainCategoriesRepresenter).to_json}
+        javascript:
+          window.currentUser = #{ raw current_user.extend(HeaderUserRepresenter).to_json}
     - else
       javascript:
         window.currentUser = {}
-        window.categories = #{ raw MainCategory.all.extend(MainCategoriesRepresenter).to_json}
 
   body
     = yield
